--- a/Fresh/Fresh/SmallPin.xib
+++ b/Fresh/Fresh/SmallPin.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A216g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
@@ -7,50 +7,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SmallPin" customModule="Fresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="112" height="45"/>
+        <view hidden="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="SmallPin" customModule="Fresh" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nBN-7H-KyX">
-                    <rect key="frame" x="65" y="12" width="39" height="21"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgSmall" translatesAutoresizingMaskIntoConstraints="NO" id="7vN-yN-1RU">
+                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                     <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QpJ-2g-53p">
-                    <rect key="frame" x="8" y="12" width="42" height="21"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </imageView>
             </subviews>
             <animations/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-            <constraints>
-                <constraint firstItem="QpJ-2g-53p" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="7Qn-u5-EgE"/>
-                <constraint firstItem="QpJ-2g-53p" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="BYV-cm-RG2"/>
-                <constraint firstItem="nBN-7H-KyX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Rj7-RH-SfO"/>
-                <constraint firstAttribute="trailing" secondItem="nBN-7H-KyX" secondAttribute="trailing" constant="8" id="Vhz-0T-Ra1"/>
-                <constraint firstItem="QpJ-2g-53p" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="tYs-sL-M7m"/>
-                <constraint firstItem="QpJ-2g-53p" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="wT0-1A-yi3"/>
-            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="tYs-sL-M7m"/>
-                    <exclude reference="wT0-1A-yi3"/>
-                </mask>
-            </variation>
-            <connections>
-                <outlet property="labelPrice" destination="nBN-7H-KyX" id="xOX-Tn-YlM"/>
-                <outlet property="labelTitle" destination="QpJ-2g-53p" id="5Hd-bI-UMV"/>
-            </connections>
-            <point key="canvasLocation" x="403" y="732.5"/>
+            <point key="canvasLocation" x="380.5" y="737.25"/>
         </view>
     </objects>
+    <resources>
+        <image name="bgSmall" width="50" height="50"/>
+    </resources>
 </document>
