--- a/Fresh/Fresh/SmallPin.xib
+++ b/Fresh/Fresh/SmallPin.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A216g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
@@ -7,25 +7,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view hidden="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="SmallPin" customModule="Fresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SmallPin" customModule="Fresh" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="50" height="65"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgSmall" translatesAutoresizingMaskIntoConstraints="NO" id="7vN-yN-1RU">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgSmall" translatesAutoresizingMaskIntoConstraints="NO" id="gOq-cJ-y1e">
                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                     <animations/>
                 </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wheat" translatesAutoresizingMaskIntoConstraints="NO" id="aoQ-oX-UMS">
+                    <rect key="frame" x="13" y="6" width="24" height="34"/>
+                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="24" id="Nfd-od-dIy"/>
+                        <constraint firstAttribute="height" constant="34" id="vvm-5B-9Xi"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <animations/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="aoQ-oX-UMS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Z26-Ia-qse"/>
+                <constraint firstItem="aoQ-oX-UMS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="fMi-it-Lyk"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="380.5" y="737.25"/>
+            <connections>
+                <outlet property="imageBgSmall" destination="gOq-cJ-y1e" id="Erx-bC-ZDd"/>
+            </connections>
+            <point key="canvasLocation" x="762" y="139.5"/>
         </view>
     </objects>
     <resources>
         <image name="bgSmall" width="50" height="50"/>
+        <image name="wheat" width="24" height="34"/>
     </resources>
 </document>
