--- a/Fresh/Fresh/SmallPin.xib
+++ b/Fresh/Fresh/SmallPin.xib
@@ -8,26 +8,32 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SmallPin" customModule="Fresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="65"/>
+            <rect key="frame" x="0.0" y="0.0" width="33" height="36"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgSmall" translatesAutoresizingMaskIntoConstraints="NO" id="gOq-cJ-y1e">
-                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                    <animations/>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wheat" translatesAutoresizingMaskIntoConstraints="NO" id="aoQ-oX-UMS">
-                    <rect key="frame" x="13" y="6" width="24" height="34"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgSmall" translatesAutoresizingMaskIntoConstraints="NO" id="gOq-cJ-y1e">
+                    <rect key="frame" x="0.0" y="0.0" width="33" height="36"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="24" id="Nfd-od-dIy"/>
-                        <constraint firstAttribute="height" constant="34" id="vvm-5B-9Xi"/>
+                        <constraint firstAttribute="width" constant="33" id="6Iu-mr-kl0"/>
+                        <constraint firstAttribute="height" constant="36" id="gqb-M1-tLf"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wheat" translatesAutoresizingMaskIntoConstraints="NO" id="aoQ-oX-UMS">
+                    <rect key="frame" x="7" y="3" width="19" height="26"/>
+                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="19" id="Nfd-od-dIy"/>
+                        <constraint firstAttribute="height" constant="26" id="vvm-5B-9Xi"/>
                     </constraints>
                 </imageView>
             </subviews>
             <animations/>
             <constraints>
+                <constraint firstItem="gOq-cJ-y1e" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="M7o-Dj-RgM"/>
                 <constraint firstItem="aoQ-oX-UMS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Z26-Ia-qse"/>
-                <constraint firstItem="aoQ-oX-UMS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="fMi-it-Lyk"/>
+                <constraint firstItem="aoQ-oX-UMS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="3" id="fMi-it-Lyk"/>
+                <constraint firstItem="gOq-cJ-y1e" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="k8m-n9-yCe"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
