--- a/Fresh/Fresh/SmallPin.xib
+++ b/Fresh/Fresh/SmallPin.xib
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9058" systemVersion="15A216g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15A216g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9048"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SmallPin" customModule="Fresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="68" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="smallPin" translatesAutoresizingMaskIntoConstraints="NO" id="0UM-wV-DaS">
-                    <rect key="frame" x="0.0" y="0.0" width="68" height="50"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayk-Aw-ltP">
+                    <rect key="frame" x="29" y="12" width="42" height="21"/>
                     <animations/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="6Xd-Nt-IQg"/>
-                        <constraint firstAttribute="width" constant="68" id="VLK-QZ-f7G"/>
-                    </constraints>
-                </imageView>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <animations/>
+            <constraints>
+                <constraint firstItem="Ayk-Aw-ltP" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="FCk-BO-8vS"/>
+                <constraint firstItem="Ayk-Aw-ltP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rHx-0b-z92"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="smallPingBg" destination="0UM-wV-DaS" id="cox-0v-cjH"/>
+                <outlet property="labelTitle" destination="Ayk-Aw-ltP" id="zi6-i6-nXF"/>
             </connections>
             <point key="canvasLocation" x="769" y="139.5"/>
         </view>
     </objects>
-    <resources>
-        <image name="smallPin" width="68" height="49"/>
-    </resources>
 </document>
